# RSeQC

./: .gitignore  Dockerfile  NEWS.md  README.md  pyproject.toml  setup.py
doc/: README.md
scripts/: tin.py
