#Declaring the build backend
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

#Project's meta data
[project]
version = "5.0.4"
name = "RSeQC"
authors = [
  {name="Liguo Wang", email="wangliguo78@gmail.com"},
  {name="Shengqin Wang", email="wzsqwang@gmail.com"},
  {name="Wei Li", email="superliwei@gmail.com"},
]
maintainers = [
  {name = "Liguo Wang", email = "wangliguo78@gmail.com"}
]
description = "QC package for RNA-seq data."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"

dependencies = [
	"pysam>=0.15.0",
	"bx-python>=0.8.13",
	"numpy>=1.17.0",
	"pyBigWig>=0.3.18",
	"logomaker>=0.8",
	"pandas>=0.25.0",
	"matplotlib>=3.0.0",
	"mpire>=2.0.0",
]

classifiers=[
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	'Development Status :: 5 - Production/Stable',
	"License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
	'Environment :: Console',
	'Intended Audience :: Science/Research',
	'Operating System :: MacOS :: MacOS X',
	'Operating System :: POSIX',
	'Topic :: Scientific/Engineering :: Bio-Informatics',
]

keywords = ["RNA-seq", "QC"]

[project.urls]
Documentation = "http://rseqc.sourceforge.net/"

[tool.setuptools]
script-files = [
	"scripts/FPKM-UQ.py",
	"scripts/FPKM_count.py",
	"scripts/RNA_fragment_size.py",
	"scripts/RPKM_saturation.py",
	"scripts/bam2fq.py",
	"scripts/bam2wig.py",
	"scripts/bam_stat.py",
	"scripts/clipping_profile.py",
	"scripts/deletion_profile.py",
	"scripts/divide_bam.py",
	"scripts/geneBody_coverage.py",
	"scripts/geneBody_coverage2.py",
	"scripts/infer_experiment.py",
	"scripts/inner_distance.py",
	"scripts/insertion_profile.py",
	"scripts/junction_annotation.py",
	"scripts/junction_saturation.py",
	"scripts/mismatch_profile.py",
	"scripts/normalize_bigwig.py",
	"scripts/overlay_bigwig.py",
	"scripts/read_GC.py",
	"scripts/read_NVC.py",
	"scripts/read_distribution.py",
	"scripts/read_duplication.py",
	"scripts/read_hexamer.py",
	"scripts/read_quality.py",
	"scripts/sc_bamStat.py",
	"scripts/sc_editMatrix.py",
	"scripts/sc_seqLogo.py",
	"scripts/sc_seqQual.py",
	"scripts/split_bam.py",
	"scripts/split_paired_bam.py",
	"scripts/tin.py",
]
